# ferris-mark-vk

./: .gitignore  .rules  Cargo.toml  LICENSE  PROMPTS.md  README.md  benchmark.sh
cargo/: config.toml
shaders/: sprite.frag  sprite.vert  sprite_debug.frag  sprite_debug.vert  sprite_minimal.vert  sprite_opt.frag  sprite_opt.vert  triangle.vert
src/: main.rs
