[package]
name = "ferris-mark-vk"
version = "0.1.0"
edition = "2021"

[dependencies]
vulkanalia = { version = "0.21", features = ["window", "libloading"] }
winit = "0.28"
glam = "0.24"
shaderc = "0.8"
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5"
