[package]
name = "ferris-mark-vk"
version = "0.1.0"
edition = "2021"

[dependencies]
vulkanalia = { version = "0.28", features = ["window", "libloading"] }
winit = "0.29"
glam = "0.25"
shaderc = "0.8"
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5"
