[package]
name = "ferris-mark-vk"
version = "0.1.0"
edition = "2024"

[dependencies]
vulkanalia = { version = "0.28", features = ["window", "libloading"] }
winit = "0.29"
glam = "0.30"
shaderc = "0.9"
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5"
image = "0.25"
fastrand = "2.0"

[profile.dev]
# Debug builds: Enable validation layers and debug info
debug = true
opt-level = 1  # Some optimization for better debug performance

[profile.release]
# Release builds: Maximum performance
debug = false
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization at cost of compile time
panic = "abort"       # Smaller binary size
strip = true          # Remove debug symbols
opt-level = 3         # Maximum optimization
